# pydbsrt

./: .dockerignore  .flake8  .gitmodules  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  TODO.md  TODO.txt  bandit.yaml  install-apt.sh  junit-report.xml  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main.yml
ansible/: inventory.yaml
data/: Teenage.Mutant.Ninja.Turtles.1990.iNTERNAL.DV-VH-PROD.french.srt  export_imghash_from_random_frrames.sh  export_random_frrames_from_videos.sh  import_all_random_frames_in_db.sh  import_all_test_videos_in_db.sh  public_test_videos.json
data/SRT/: 43956.srt  The Golden Child (1986) 1080p web.en.srt  The Golden Child.DVD_PAL.fre.srt
doc/: 2020-05-25-FFMPEG_Matching_Analysis.md  2021-04-13.md  analysis_usecases_data-models.md  analysis_usecases_data-models.md~  schema.md
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml  docker_container_for_pypi.Dockerfile
docker/pg-spgist_hamming/11.3-3.0-develop/: Dockerfile  initdb-bktree.sh
docker/pg-spgist_hamming/9.6-3.0-develop/: Dockerfile  docker-compose.yml
notebook/: 43956.srt  Teenage.Mutant.Ninja.Turtles.1990.1080p.BluRay.H264.AAC-RARBG.srt  Teenage.Mutant.Ninja.Turtles.1990.iNTERNAL.DV-VH-PROD.french.shift.srt  The Golden Child (1986) 1080p web.en.srt  The Golden Child.DVD_PAL.fre.srt  The Golden Child.DVD_PAL.fre.srt.bak  googletrans.ipynb  opensubtitle_imdb.ipynb  pysrt_synchronize_subtitles.ipynb
scripts/: import_phash_into_db.sh  recognize_medias.sh
src/pydbsrt/: app.py  app_cli.py  app_images_hashes_builder.py  app_with_sqlalchemy.py  cbktree_example.py  settings.py
src/pydbsrt/POC/: search_google_images.py  search_imdb_movies.py
src/pydbsrt/applications/: __init__.py  export_imghash_from_media.py  export_imghash_from_subtitles_and_media.py  extract_subtitles_from_medias.py  import_imghash_into_db.py  import_subtitles_into_db.py  recognize_media.py  retarget_subtitles.py  search_imghash_in_db.py  show_imghash_from_subtitles_and_media.py  show_imghash_from_subtitles_and_media_in_db.py  wip_generate_subtitles.py
src/pydbsrt/applications/old/: _app.py_
src/pydbsrt/models/: __init__.py  database_import.py  frames.py  matching.py  phash.py  searching.py  subtitles.py
src/pydbsrt/services/: __init__.py  cuts.py  database.py  database_services.py  db_frames.py  db_subtitles.py  export_imghash_from_media.py  export_imghash_from_subtitles_and_media.py  extended_subtitles.py  extract_subtitles_from_medias.py  imghash.py  import_imghash_into_db.py  insert_in_db.py  matching.py  models.py  reader_frames.py  recognize_media.py  retarget_srt.py  search_imghash_in_db.py  search_in_db.py  show_imghash_from_subtitles_and_media.py  subtitles.py
src/pydbsrt/services/old/: _app.py  _app_with_pg.py  app_with_sqlalchemy.py
src/pydbsrt/tools/: aio_filehash.py  async_builtins.py  async_googlesearch.py  chunk.py  compare.py  constants.py  coro.py  db_frames.py  downloader.py  encoded_subtitles.py  filehash.py  imghash.py  importantframefingerprint.py  logical.py  pairwise.py  rich_colums.py  rich_helpers.py  rick_find_emoji.py  search_in_db.py  search_tree.py  silence_capture_stdout_stderr.py  srt_fp_item.py  str_fp_file.py  subfingerprint.py  subreader.py  timer_profiling.py  tqdm_with_logger.py  videofingerprint.py  videoreader.py
src/pydbsrt/tools/ffmpeg_tools/: ffmeg_extract_frame.py  ffmpeg_cat.py  ffmpeg_cut.py  ffmpeg_scale.py
src/pydbsrt/tools/ffmpeg_wrapper/: FFException.py  FFMedia.py  FFStream.py  FFmpeg.py  FFmpegFilter.py  FFprobe.py  __init__.py
src/pydbsrt/translate/: sync_srt.py  sync_srt_with_translations.py  with_bio_pairwise.py
tests/: conftest.py  test_export_imghash.py  test_googletrans.py
tests/applications/: test_cli_export_imghash_from_media.py  test_cli_export_imghash_from_subtitles_and_media.py  test_cli_extract_subtitles_from_medias.py  test_cli_import_imghash_into_db.py  test_cli_recognize_media.py  test_cli_retarget_subtitles.py  test_cli_search_imghash_in_db.py  test_cli_show_imghash_from_subtitles_and_media.py  test_cli_show_imghash_from_subtitles_and_media_in_db.py  test_export_imghash_from_media.py  test_export_imghash_from_subtitles_and_media.py  test_show_imghash_from_subtitles_and_media.py  test_show_imghash_from_subtitles_and_media_in_db.py
tests/data/: big_buck_bunny_trailer_480p.phash
tests/services/: test_db_frames.py  test_export_extended_subtitles.py  test_export_imghash_from_media.py  test_extended_subtitles.py  test_matching.py  test_retarget_subtitles.py  test_search_imghash_in_db.py  test_search_in_db.py
tests/tools/: test_aio_filehash.py  test_imghash.py
