[tool.poetry]
name = "pydbsrt"
version = "0.1.0"
description = ""
authors = ["ATTY Lionel <lionel.atty@365talents.com>"]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.8"
bitstring = ">=3.1.5"
Distance = ">=0.1.3"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
ImageHash = ">=4.0"
imageio = ">=2.3.0"
imageio-ffmpeg = ">=0.2.0"
prettyprint = ">=0.1.5"
pysrt = ">=1.1.1"
python-Levenshtein = ">=0.12.0"
python-opensubtitles = ">=0.2.dev0"
googletrans = ">=2.4.0"
tqdm = ">=4.24.0"
Pillow = "^8.0.1"
psycopg2 = "^2.8.6"
python-sql = "^1.2.1"
SQLAlchemy = "^1.3.20"
imohash = "1.0.4"
sqltap = "0.3.11"
contexttimer = "^0.3.3"
rich = {extras = ["spinner"], version = "^9.3.0"}
click = "^7.1.2"
click-pathlib = "^2020.3.13"
asyncpg = "^0.21.0"
uvloop = "^0.14.0"
more-itertools = "^8.6.0"
pandas = "^1.1.4"
msgpack = "^1.0.0"
ujson = "^4.0.1"
yaspin = "^1.2.0"
dictdiffer = "^0.8.1"
asyncstdlib = "^3.9.2"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
unimport = "^0.6.8"
pytest = "^6.1.2"
pre-commit = "^2.9.3"
sh = "^1.14.1"
pytest-shell = "^0.2.3"
pytest-click = "^1.0.2"
pytest-postgresql = "^2.5.2"
pytest-lazy-fixture = "^0.6.3"
pytest-docker-db = "^1.1.0"
pytest-asyncio = "^0.15.1"
pytest-docker-compose = "^3.2.1"
coverage = "^5.5"
waiting = "^1.4.1"
bandit = "^1.7.0"

[tool.unimport]
sources = ["src"]
exclude = 'src/pydbsrt/services/old/'
gitignore = true
requirements = true
remove = true
diff = true

# https://docs.pytest.org/en/stable/warnings.html#deprecationwarning-and-pendingdeprecationwarning
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*U.*mode is deprecated:DeprecationWarning",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
