[metadata]
name = srt-db
version = 0.1.0
license = None
description =
author = Lionel Atty
author_email = yoyonel@hotmail.com
url = https://github.com/yoyonel/pydbsrt.git
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
python_requires =
    >=3.6
    
[options]
package_dir=
    =src
packages=find:
install_requires =
    attrs==17.4.0
    bitstring==3.1.5
    distance==0.1.3
    fuzzywuzzy==0.17.0
    ImageHash==4.0
    imageio==2.3.0
    prettyprint==0.1.5
    pysrt==1.1.1
    python-Levenshtein==0.12.0
    python-opensubtitles==0.2.dev0
    py-translator==1.8.9
    tqdm==4.24.0

[options.packages.find]
where=src
exclude =
    tests

# https://stackoverflow.com/questions/48884796/how-to-setup-entry-points-in-setup-cfg
[options.entry_points]
console_scripts =
    pydbsrt = pydbsrt.app:main

[bdist_wheel]
universal=1

[flake8]
max-line-length = 140

[tool:pytest]
mock_use_standalone_module = true

testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py

addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short


[check-manifest]
ignore =
  .dockerignore
  .gitmodules
  MANIFEST.in
  Makefile
  docker
  docker/Dockerfile

[aliases]
test=pytest